responsive websites and popular section added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,115 @@
         </div>
     </header>
     <main>
+        <!-- websites section -->
+        <section class="websites">
+            <img src="./assets/logos/Alibaba.svg" alt="">
+            <img src="./assets/logos/Amazon.svg" alt="">
+            <img src="./assets/logos/Daraz.pk Logo.svg" alt="">
+            <img src="./assets/logos/Ebay.svg" alt="">
+            <img src="./assets/logos/Rakuten.svg" alt="">
+            <img src="./assets/logos/Target.svg" alt="">
+            <img src="./assets/logos/Walmart.svg" alt="">
+        </section>
+        <!-- Popular collections section -->
+        <section class="popular">
+            <h3 class="popular-title">Popular Collection</h3>
+            <div class="popular-collection">
+                <div class="popular-img">
+                    <img src="./assets/images/tripod.png" alt="">
+                    <h3 class="popular-img-title">Flex Tripod</h3>
+                    <p class="popular-img-price">$50.48</p>
+                    <p>ratings</p>
+                    <p class="popular-img-desc">
+                        Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-img">
+                    <img src="./assets/images/mic.png" alt="">
+                    <h3 class="popular-img-title">microphone</h3>
+                    <p class="popular-img-price">$120.25</p>
+                    <p>ratings</p>
+                    <p class="popular-img-desc">
+                        Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-img">
+                    <img src="./assets/images/airpod.png" alt="">
+                    <h3 class="popular-img-title">Airpod</h3>
+                    <p class="popular-img-price">$100.00</p>
+                    <p>ratings</p>
+                    <p class="popular-img-desc">
+                        Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-img">
+                    <img src="./assets/images/drone.png" alt="">
+                    <h3 class="popular-img-title">Drone</h3>
+                    <p class="popular-img-price">$980.25</p>
+                    <p>ratings</p>
+                    <p class="popular-img-desc">
+                        Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-img">
+                    <img src="./assets/images/lights.png" alt="">
+                    <h3 class="popular-img-title">Light Setup</h3>
+                    <p class="popular-img-price">$1200.00</p>
+                    <p>ratings</p>
+                    <p class="popular-img-desc">
+                        Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-img">
+                    <img src="./assets/images/setup.png" alt="">
+                    <h3 class="popular-img-title">Photoshoot set</h3>
+                    <p class="popular-img-price">$820.40</p>
+                    <p>ratings</p>
+                    <p class="popular-img-desc">
+                        Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-img">
+                    <img src="./assets/images/camera.png" alt="">
+                    <h3 class="popular-img-title">Vlogging Camera</h3>
+                    <p class="popular-img-price">$1800.80</p>
+                    <p>ratings</p>
+                    <p class="popular-img-desc">
+                        Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-img">
+                    <img src="./assets/images/single-light.png" alt="">
+                    <h3 class="popular-img-title">Green Screen</h3>
+                    <p class="popular-img-price">$25.48</p>
+                    <p>ratings</p>
+                    <p class="popular-img-desc">
+                        Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="popular-img">
+                    <img src="./assets/images/action.png" alt="">
+                    <h3 class="popular-img-title">Action Camera</h3>
+                    <p class="popular-img-price">$380.00</p>
+                    <p>ratings</p>
+                    <p class="popular-img-desc">
+                        Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+            </div>
+            <p class="see-more"><span>See More</span><i class="fa-solid fa-arrow-right"></i></p>
+
+
+        </section>
 
     </main>
     <footer>
