added responsive feature section

--- a/index.html
+++ b/index.html
@@ -145,10 +145,19 @@
                 </div>
             </div>
             <p class="see-more"><span>See More</span><i class="fa-solid fa-arrow-right"></i></p>
-
-
         </section>
 
+        <!-- feature section -->
+        <section class="feature">
+            <img src="./assets/images/gear.png" alt="">
+            <div class="feature-info">
+                <h3 class="feature-title">Featured products at one place</h3>
+                <p class="feature-desc">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <button class="primary-btn btn"><span>Join Now</span><i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </section>
     </main>
     <footer>
 
