--- a/index.html
+++ b/index.html
@@ -160,7 +160,17 @@
         </section>
     </main>
     <footer>
-
+        <h3 class="footer-title">Influencer products</h3>
+        <p class="footer-desc">
+            Copyright © 2020  influencer products <br>
+            All rights reserved
+        </p>
+        <div class="social-link">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-solid fa-basketball"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </div>
     </footer>
 </body>
 
